<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".IdentifyCarImageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carImgTimer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/customize_edit_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/count_down_begin"
                android:textColor="@color/yellow_550"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/carImgIdentifyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_heading"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/car_img_identify_title"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/idnCarImgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/carImgViewOne"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:contentDescription="@string/car_img_view_one"
                android:focusable="true"
                android:onClick="identifyCarImageViewOne" />

            <ImageView
                android:id="@+id/carImgViewTwo"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:clickable="true"
                android:contentDescription="@string/car_img_view_two"
                android:focusable="true"
                android:onClick="identifyCarImageViewTwo" />

            <ImageView
                android:id="@+id/carImgViewThree"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/car_img_view_three"
                android:focusable="true"
                android:onClick="identifyCarImageViewThree" />

            <TextView
                android:id="@+id/carImgResult"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_result_background"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="30sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/carImgNextBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/car_img_identify_next_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>