<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AdvancedLevelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/advancedLevelScore"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_heading"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="right"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/advanced_level_points"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/advancedLevelTimer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/customize_edit_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/count_down_begin"
                android:textColor="@color/yellow_550"
                android:textSize="20sp"  />

            <TextView
                android:id="@+id/advancedLevelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_heading"
                android:fontFamily="sans-serif-medium"
                android:text="@string/advanced_level_title"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/advancedLevelViewOne"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/car_img_view_one" />

            <EditText
                android:id="@+id/editTextCarNameOne"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:background="@drawable/customize_heading"
                android:hint="@string/edit_car_name_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_550"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no"
                android:textCursorDrawable="@color/black"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/correctAnsOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/yellow_500"
                android:background="@drawable/customize_result_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/advancedLevelViewTwo"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/car_img_view_two" />

            <EditText
                android:id="@+id/editTextCarNameTwo"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:background="@drawable/customize_heading"
                android:hint="@string/edit_car_name_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_550"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no"
                android:textCursorDrawable="@color/black"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/correctAnsTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/yellow_500"
                android:background="@drawable/customize_result_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/advancedLevelViewThree"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/car_img_view_three" />

            <EditText
                android:id="@+id/editTextCarNameThree"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPersonName"
                android:background="@drawable/customize_heading"
                android:hint="@string/edit_car_name_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_550"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no"
                android:textCursorDrawable="@color/black"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/correctAnsThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/yellow_550"
                android:background="@drawable/customize_result_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/advancedLevelResult"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_result_background"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="30sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/advancedLevelSubmitBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/advanced_level_submit_btn"
                android:onClick="submitAnswer"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>