<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CarHintsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carHintsTimer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/customize_edit_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/count_down_begin"
                android:textColor="@color/yellow_550"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/carHintsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_heading"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/car_hints_title"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/carHintsImgView"
                android:layout_width="367dp"
                android:layout_height="283dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/car_make_img_view" />

            <TextView
                android:id="@+id/carHintsBlankDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@color/yellow_500"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/carHintsEditText"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/customize_edit_text"
                android:ems="2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:hint="@string/car_hints_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="1"
                android:selectAllOnFocus="true"
                android:textColor="@color/yellow_550"
                android:textColorHint="@color/gray_200"
                android:textCursorDrawable="@color/yellow_500"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/carHintsResult"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_result_background"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="30sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/carHintsCorrectAns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_result_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@color/yellow_550"
                android:textSize="25sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/carHintsSubmitBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:onClick="characterCheck"
                android:text="@string/advanced_level_submit_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

